<resources>
    <string name="app_name">Shoe Store</string>
    <string name="email_label">Email</string>
    <string name="email_field">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_existing_account">Login with existing account</string>
    <string name="shoe_box_image">Shoe Box Image</string>
    <string name="welcome_to_my_shoe_store">Welcome to my shoe store</string>
    <string name="have_a_look_around">Have a look around</string>
    <string name="instructions">Instructions</string>
    <string name="you_might_want_to_get_out_of_here_and_go_to_another_screen">You might want to get out of here and go to another screen</string>
    <string name="we_hold_these_truths_to_be_self_evident">We hold these truths to be self evident</string>
    <string name="shoe_list">shoe_list</string>
    <string name="launch_shoe_detail_screen">Launch Shoe Detail Screen</string>
    <string name="string_launch_shoe_detail_screen" />
</resources>